Update Sphere.java